--- a/client/partials/book-detail.html
+++ b/client/partials/book-detail.html
@@ -1,6 +1,18 @@
 <h2>Book</h2>
 
-<!-- TODO: Create input elements with angular for displaying all forms -->
+<form name="bookForm">
 
-<!-- TODO: Create buttons for delete and save with angular -->
+    <p>Id: <input type="text" data-ng-model="books.doc._id" readonly></p>
+
+    <p>Title: <input type="text" data-ng-model="books.doc.title"></p>
+
+    <p>Author: <input type="text" data-ng-model="books.doc.author"></p>
+
+    <p>Description: <input type="text" data-ng-model="books.doc.description"></p>
+
+    <button type="button" data-ng-click="delete()" id="deleteBtn">Delete</button>
+
+    <button type="button" data-ng-click="save()" id="saveBtn">Save</button>
+
+</form>
 
